[gd_scene load_steps=29 format=3 uid="uid://dgtlwwsmtiwtn"]

[ext_resource type="PackedScene" uid="uid://bpggn6rfp70y2" path="res://scene/Background.tscn" id="1_3mncm"]
[ext_resource type="Script" uid="uid://b6cx2hfnkd057" path="res://script/Home.gd" id="1_8nwth"]
[ext_resource type="Texture2D" uid="uid://bj0km8pnflson" path="res://image/titile7.png" id="3_idvbg"]
[ext_resource type="Texture2D" uid="uid://dynec8127lrcn" path="res://image/bird1_0.png" id="3_rofjb"]
[ext_resource type="Texture2D" uid="uid://1pqepk4bsrym" path="res://image/bird1_1.png" id="4_4ri0l"]
[ext_resource type="Texture2D" uid="uid://co3v3ascl0p3o" path="res://image/bird1_2.png" id="5_itf6j"]
[ext_resource type="Texture2D" uid="uid://6p6jk5lmnevt" path="res://image/button_play.png" id="6_xrh3e"]
[ext_resource type="Texture2D" uid="uid://dg8hoe7a44hyj" path="res://image/bird2_0.png" id="7_sl34s"]
[ext_resource type="Texture2D" uid="uid://k0mn4lk3kb00" path="res://image/bird2_1.png" id="8_1g2pb"]
[ext_resource type="Texture2D" uid="uid://brwfyolfyudk8" path="res://image/bird2_2.png" id="9_83qvx"]
[ext_resource type="Texture2D" uid="uid://3x7ym4gw2wdi" path="res://image/bird0_0.png" id="10_bghpi"]
[ext_resource type="Texture2D" uid="uid://bhq2q5csrvf6c" path="res://image/bird0_1.png" id="11_5m7p4"]
[ext_resource type="Texture2D" uid="uid://ffqyrvetr2n2" path="res://image/bird0_2.png" id="12_oult4"]
[ext_resource type="Texture2D" uid="uid://bwf1bps7mrba4" path="res://image/button_score.png" id="14_ag2sf"]
[ext_resource type="FontFile" uid="uid://dwo20txgiw2r7" path="res://font/HarmonyOS_Sans_SC_Medium.ttf" id="15_0bsti"]
[ext_resource type="Texture2D" uid="uid://n05dnlm5xib2" path="res://image/ui/UI_Tutorial_PCDialog.png" id="15_6vpau"]
[ext_resource type="AudioStream" uid="uid://emoen87sij2h" path="res://audio/Freedom-Trail-Studio.mp3" id="16_ecpid"]
[ext_resource type="Texture2D" uid="uid://c7doyqimg0tum" path="res://image/currency/icon_offline_gold.png" id="17_jn7v0"]
[ext_resource type="Texture2D" uid="uid://b2gw8wyd0m175" path="res://image/currency/icon_offline_gem.png" id="18_24tf2"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dyn88"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_rofjb")
}, {
"duration": 1.0,
"texture": ExtResource("4_4ri0l")
}, {
"duration": 1.0,
"texture": ExtResource("5_itf6j")
}],
"loop": true,
"name": &"blue",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_sl34s")
}, {
"duration": 1.0,
"texture": ExtResource("8_1g2pb")
}, {
"duration": 1.0,
"texture": ExtResource("9_83qvx")
}],
"loop": true,
"name": &"red",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_bghpi")
}, {
"duration": 1.0,
"texture": ExtResource("11_5m7p4")
}, {
"duration": 1.0,
"texture": ExtResource("12_oult4")
}],
"loop": true,
"name": &"yellow",
"speed": 8.0
}]

[sub_resource type="Animation" id="Animation_vc1ir"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.523599]
}

[sub_resource type="Animation" id="Animation_3flym"]
resource_name = "title"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Title:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.261799, -0.261799, 0.261799]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_f2j7k"]
_data = {
&"RESET": SubResource("Animation_vc1ir"),
&"title": SubResource("Animation_3flym")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_o10le"]
texture = ExtResource("14_ag2sf")
region_rect = Rect2(0, 0, 116, 70)
modulate_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3kau3"]
texture = ExtResource("15_6vpau")
region_rect = Rect2(0, 0, 288, 180)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_k0g0d"]
texture = ExtResource("15_6vpau")
region_rect = Rect2(0, 0, 288, 180)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sxfqs"]
texture = ExtResource("15_6vpau")
region_rect = Rect2(0, 0, 288, 180)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_kirkd"]
texture = ExtResource("15_6vpau")
region_rect = Rect2(0, 0, 288, 180)

[node name="Home" type="Node2D"]
script = ExtResource("1_8nwth")

[node name="Background" parent="." instance=ExtResource("1_3mncm")]

[node name="UI" type="Node2D" parent="."]
position = Vector2(576, 90)
metadata/_edit_group_ = true

[node name="Title" type="Sprite2D" parent="UI"]
rotation = -0.523599
texture = ExtResource("3_idvbg")

[node name="Bird" type="AnimatedSprite2D" parent="UI"]
position = Vector2(0, 80)
sprite_frames = SubResource("SpriteFrames_dyn88")
animation = &"blue"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI"]
autoplay = "title"
libraries = {
"": SubResource("AnimationLibrary_f2j7k")
}

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="Currency" type="Control" parent="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Sprite2D" type="Sprite2D" parent="Control/Currency"]
position = Vector2(24, 24)
scale = Vector2(0.380165, 0.380165)
texture = ExtResource("17_jn7v0")

[node name="Gold" type="Label" parent="Control/Currency"]
layout_mode = 0
offset_left = 46.0
offset_top = 12.0
offset_right = 101.0
offset_bottom = 38.0
text = "100000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gem" type="Label" parent="Control/Currency"]
layout_mode = 0
offset_left = 164.0
offset_top = 12.0
offset_right = 219.0
offset_bottom = 38.0
text = "100000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sprite2D2" type="Sprite2D" parent="Control/Currency"]
position = Vector2(139, 25)
scale = Vector2(0.413223, 0.413223)
texture = ExtResource("18_24tf2")

[node name="Start" type="Button" parent="Control"]
layout_mode = 0
offset_left = 513.0
offset_top = 220.0
offset_right = 629.0
offset_bottom = 290.0
theme_override_styles/focus = SubResource("StyleBoxTexture_o10le")
icon = ExtResource("6_xrh3e")
flat = true

[node name="RankButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 451.0
offset_top = 304.0
offset_right = 575.0
offset_bottom = 382.0
theme_override_styles/focus = SubResource("StyleBoxTexture_o10le")
icon = ExtResource("14_ag2sf")
flat = true

[node name="Chat" type="Button" parent="Control"]
layout_mode = 0
offset_left = 603.0
offset_top = 307.0
offset_right = 691.0
offset_bottom = 365.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("15_0bsti")
theme_override_styles/normal = SubResource("StyleBoxTexture_3kau3")
theme_override_styles/hover = SubResource("StyleBoxTexture_k0g0d")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sxfqs")
theme_override_styles/focus = SubResource("StyleBoxTexture_kirkd")

[node name="RankList" type="ItemList" parent="Control"]
visible = false
layout_mode = 0
offset_right = 459.0
offset_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("15_0bsti")
theme_override_font_sizes/font_size = 25

[node name="ChatPanel" type="Control" parent="Control"]
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MessageList" type="ItemList" parent="Control/ChatPanel"]
layout_mode = 0
offset_left = 705.0
offset_right = 1152.0
offset_bottom = 512.0
theme_override_fonts/font = ExtResource("15_0bsti")

[node name="LineEdit" type="LineEdit" parent="Control/ChatPanel"]
layout_mode = 0
offset_left = 316.0
offset_right = 705.0
offset_bottom = 56.0
theme_override_fonts/font = ExtResource("15_0bsti")
placeholder_text = "输入要发送的内容"

[node name="Button" type="Button" parent="Control/ChatPanel"]
layout_mode = 0
offset_left = 525.0
offset_top = 71.0
offset_right = 618.0
offset_bottom = 107.0
theme_override_fonts/font = ExtResource("15_0bsti")
text = "发送"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_ecpid")
autoplay = true
